[tool.poetry]
name = "qanta"
version = "0.1.0"
description = ""
authors = ["Pedro Rodriguez <ski.rodriguez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
jinja2 = "^2.11.1"
aiofiles = "^0.4.0"
sqlalchemy = "^1.3.16"
uvicorn = "^0.11.3"
click = "^7.1.1"
pedroai = "^0.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
